Updates to make the itinerary layouts semi-functional

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      {% include site-wide.html %}
-      <link rel="stylesheet/less" type="text/css" href="/css/default.less" />
+      {% include site-wide-links.html %}
     </head>
     <body>
 
@@ -47,10 +46,10 @@
 
         </div>
       </div> <!-- Jumbotron -->
-      <div class="container">          
+        
 
-        {{ content }}
-      </div> <!-- End Container -->
+      {{ content }}
+
       
       {% include site-wide-footer.html %}
 
