--- a/_layouts/itinerary.html
+++ b/_layouts/itinerary.html
@@ -2,26 +2,35 @@
 layout: default
 ---
 
-<div class="row" >
-  <div class="col-md-8">
-    <div class="itinerary" style="padding-top: 20px;">
-    {{ content }}
+<div class="container">  
+  <div class="row" >
+    <div class="col-md-9">
+      <div class="itinerary" style="padding-top: 20px;">
+        {% contentblock itinerary_summary %}
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div style="text-align:right;">
+        <h2>{{ page.title }}</h2>
+        <p class="meta"> {{ page.date | date_to_string }}</p>
+        <ul style="font-size: 1.4em;">
+          <li> <i class=" fa fa-dollar "> </i>
+            {{ page.cost_per_person }} a person</li>
+          <li>  <i class="fa fa-clock-o"> </i> 
+            {{ page.trip_time_in_seconds | divided_by: 3600 | round(1, 'floor') }} hours</li>
+          <li> by {{ page.transportation_mode | capitalize }}  </li>
+
+        </ul>
+      </div>
+    </div>
+
+
+  </div> <!-- end row -->
+
+  <div class="row itinerary" >
+    <div class="col-md-10">
+      {{ content }}
     </div>
   </div>
-  <div class="col-md-4">
-    <div style="text-align:right;">
-      <h2>{{ page.title }}</h2>
-      <p class="meta"> {{ page.date | date_to_string }}</p>
-      <ul style="font-size: 1.4em;">
-        <li> <i class=" fa fa-dollar "> </i>
-          {{ page.cost_per_person }} a person</li>
-        <li>  <i class="fa fa-clock-o"> </i> 
-          {{ page.trip_time_in_seconds | divided_by: 3600 | round(1, 'floor') }} hours</li>
-        <li> by {{ page.transportation_mode | capitalize }}  </li>
 
-      </ul>
-    </div>
-  </div>
-
-
-</div> <!-- end row -->
+</div> <!-- End Container -->
