--- a/_layouts/no-wrap.html
+++ b/_layouts/no-wrap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      {% include site-wide.html %}
+      {% include site-wide-links.html %}
       <link rel="stylesheet/less" type="text/css" href="/css/default.less" />
     </head>
     <body>
@@ -14,6 +14,6 @@
 
 
 
-{% include site-wide-javascript.html %}
+      {% include site-wide-javascript.html %}
     </body>
 </html>
