--- a/css/default.less
+++ b/css/default.less
@@ -13,7 +13,7 @@ h1, h2, h3, h4 {
   font-family: 'PT Sans', 'helvetica', 'sans-serif';
 }
 
-Ul {
+ul {
   list-style-type: none;
   padding-left: 0px;
 }
@@ -263,3 +263,83 @@ a.btn.btn-icon {
     }
   }
 
+.picture-box {
+  // text-align: center;
+  color: #fff;
+  // font-size: 1.4em;
+  height: 500px;
+  // background-position: center;
+  // background-size: 100% 100%;
+  padding: 0px;
+  font-weight: 200;
+  background-repeat: no-repeat;
+  .fader {
+    position: absolute; 
+    width: 100%; 
+    height:500px;
+    left: 0px;
+  }
+  p {
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 30px;
+  }
+}
+
+.image-carousel {
+  text-align: left; 
+  padding: 18px;
+  margin-left: -18px;
+  overflow: none;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+
+  height: 350px;
+  width: 100%;
+  white-space: nowrap;
+
+
+  list-style-type: none;
+  padding-left: 0px;
+
+
+  &.has-overflow {
+    -moz-box-shadow: inset -10px 0 15px -14px #999;
+    -webkit-box-shadow: inset -10px 0 15px -14px #999;
+    box-shadow: inset -10px 0 15px -14px #999;
+  }
+  
+
+
+  li {
+    color: #fff;
+    display: inline-block;
+    // float: left;
+    width: 300px;
+    height: 300px;
+    border-radius: 4px;
+
+    -webkit-box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
+    -moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
+    box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
+
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+
+    &:hover {
+      -webkit-box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
+      -moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
+      box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
+    }
+    cursor: pointer;
+
+    a {
+      color: #fff;
+      font-size: 1.3em;
+      font-weight: 400;
+      text-shadow: 0px 0px 3px #888;
+    }
+  }
+}
