Updates to front-page and elsewhere.

--- a/css/front-page.less
+++ b/css/front-page.less
@@ -8,8 +8,9 @@
 
     }
   }
-  ul.itineraries {
-    text-align: center; 
+  ul.itineraries { 
+    padding-left: 8px;
+
     li {
       color: #fff;
       display: inline-block;
@@ -20,29 +21,7 @@
       border-radius: 4px;
       margin: 10px;
       padding-top: 350px;
-
-      -webkit-box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
-      -moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
-      box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.3), 0px 2px 18px rgba(220,220,220,1.0);
-
-      -webkit-transition: all .1s ease-in-out;
-      -moz-transition: all .1s ease-in-out;
-      -o-transition: all .1s ease-in-out;
-      transition: all .1s ease-in-out;
-
-      &:hover {
-        -webkit-box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
-        -moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
-        box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.4), 0px 2px 18px rgba(190,190,190,1.0);
-      }
-      cursor: pointer;
-
-      a {
-        color: #fff;
-        font-size: 1.3em;
-        font-weight: 400;
-        text-shadow: 0px 0px 3px #888;
-      }
+      text-align: center;
     }
   }
 }
