Committing old changes. Looks safe.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 
 
-      <div class="nav-hover" data-200="top:-40px;" data-300="top:0px;">
+      <div class="nav-hover hidden" data-200="top:-40px;" data-300="top:0px;">
         <div class="jumbotron floating">
           <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
